adicionada figura argentina e cusco juntas

--- a/TCC_02/Aula01/secoes/Apresentacao/apresentacao.tex
+++ b/TCC_02/Aula01/secoes/Apresentacao/apresentacao.tex
@@ -5,13 +5,12 @@
 		\begin{itemize}
 			\item Adilson Khouri,  jogador de Magic the Gathering, nerd, apaixonado por computação e machine learning!
 		\end{itemize}
-		\begin{figure}[!htb]
+		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 5cm]{./pic/AdilsonArgentina.jpg}
-			%\caption{Eu na Argentina!}
+			\includegraphics[height=5cm, width = 9cm]{./pic/join.png}
+			\caption{Eu na Argentina!}
 			\label{fig_adilson_argentina}
 		\end{figure}
-		
 	\end{block}
 \end{frame}
 			
