adicionada linha colorida na tabela de cronograma

--- a/TCC_02/Aula02/secoes/Cronograma/cronograma.tex
+++ b/TCC_02/Aula02/secoes/Cronograma/cronograma.tex
@@ -7,7 +7,7 @@
 		\hline
 		\textbf{Aula} & \textbf{Conteúdo}  \\ \hline
 		 05/11/2018 & Estrutura do trabalho acadêmico \\ \hline	
-		 12/11/2018  & Trabalho acadêmico x Trabalhos indústria  \\ \hline	
+		 \rowcolor{yellow}  12/11/2018  & Trabalho acadêmico x Trabalhos indústria  \\ \hline	
 		 26/11/2018 & Fontes de informação  \\ \hline	
 		 03/12/2018 & Citações \\ \hline 		 		 
 		\end{tabular}
