--- a/TCC_02/Aula01/secoes/Cronograma/cronograma.tex
+++ b/TCC_02/Aula01/secoes/Cronograma/cronograma.tex
@@ -6,7 +6,7 @@
 		\begin{tabular}{|l|l|}
 		\hline
 		\textbf{Aula} & \textbf{Conteúdo}  \\ \hline
-		 05/11/2018 & Estrutura do trabalho acadêmico \\ \hline	
+		 \rowcolor{yellow}  05/11/2018 & Estrutura do trabalho acadêmico \\ \hline	
 		 12/11/2018  & Trabalho acadêmico x Trabalhos indústria  \\ \hline	
 		 26/11/2018 & Fontes de informação  \\ \hline	
 		 03/12/2018 & Citações \\ \hline 		 		 
