--- a/TCC_02/Aula02/secoes/Duvidas/duvidas.tex
+++ b/TCC_02/Aula02/secoes/Duvidas/duvidas.tex
@@ -5,3 +5,9 @@
 		Alguma dúvida?
 	\end{block}
 \end{frame}
+
+\begin{frame}
+	\begin{block}{Hands on}
+		Usem o tempo restante da aula para avançar com o projeto de TCC e/ou tirar dúvidas com o docente.
+	\end{block}
+\end{frame}
