adicionadas referencias na aula 01 da disciplina TCC2 curso de gestao

--- a/TCC_02/Aulas_Fonte_Professor/Aula01/Aula01_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/Aula01_TCC_02.tex
@@ -37,4 +37,12 @@
 
 	\input{./secoes/Contato/contato}
 
+
+\begin{frame}{}
+	\begin{block}{Referências}
+		\bibliographystyle{IEEEtranN}
+    		\bibliography{referencias}
+	\end{block}
+\end{frame}
+
 \end{document}
