--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/BaseTeorica/baseteorica.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/BaseTeorica/baseteorica.tex
@@ -9,7 +9,7 @@
 			  \item Equações
 			  \item Provas de teoremas matemáticos
 			  \item Frameworks para gestão de projetos
-			  \item Exemplo de mestrado com fundamentação teórica \href{http://www.teses.usp.br/teses/disponiveis/100/100131/tde-19042016-140611/pt-br.php}{\color{blue}{Mestrado}} 
+			  \item Exemplo de mestrado com fundamentação teórica \href{http://www.teses.usp.br/teses/disponiveis/100/100131/tde-19042016-140611/pt-br.php}{\color{blue}{Mestrado}} \cite{KHOURI_2016}
 		  \end{itemize}
 	\end{block}
 	
