--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Desenvolvimento/desenvolvimento.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Desenvolvimento/desenvolvimento.tex
@@ -4,7 +4,7 @@
 	\begin{block}{Desenvolvimento}
 		 \begin{itemize}
 			  \item Sua contribuição			  
-			  \item {\color{red}{A inovação proposta que não existe no estado da arte} }
+			  \item \textbf{Inovação proposta que não existe no estado da arte}
 			  \item Como você fez?
 			  \item O que torna sua solução melhor?
 			  \item Descrever em detalhes a solução
