--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Introducao/introducao.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Introducao/introducao.tex
@@ -8,7 +8,7 @@
 			  \item Qual a relevância desse trabalho para a área de conhecimento em questão (O que seu trabalho tem que o resto da literatura não tem?)
 			  \item O que você fez para resolver os problemas definidos?
 			  \item Qual a estrutura do restante do trabalho
-			  \item Exemplo de artigo da revista \href{https://www.nature.com/scitable/topicpage/scientific-papers-13815490}{\color{blue}{Nature}} 
+			  \item Exemplo de artigo da revista \href{https://www.nature.com/scitable/topicpage/scientific-papers-13815490}{\color{blue}{Nature}} \cite{NATURE_2018}
 		  \end{itemize}
 	\end{block}
 \end{frame}
