--- a/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Metodologia/metodologia.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/secoes/Metodologia/metodologia.tex
@@ -11,7 +11,7 @@
 			  \item Qual o tamanho da sua amostra? Quem é sua população?
 			  \item Como será a coleta de dados?
 		      \item Como os dados serão analisados?
-		      \item Como escrever a seção de métodos \href{http://posgraduando.com/como-escrever-material-e-metodos/}{\color{blue}{Métodos}} 
+		      \item Como escrever a seção de métodos \href{http://posgraduando.com/como-escrever-material-e-metodos/}{\color{blue}{Métodos}} \cite{POSGRADUANDO_2018}
 		  \end{itemize}
 	\end{block}
 \end{frame}
