corrigidas as referencias para splitar em mais de um slide

--- a/AED/Aulas_Fonte_Professor/Aula6/Aula06_AED.tex
+++ b/AED/Aulas_Fonte_Professor/Aula6/Aula06_AED.tex
@@ -23,12 +23,11 @@
 
 	\input{../../../SecoesComuns/Contato/contato}
 
-	\begin{frame}{}
-		\begin{block}{Referências}
+	\begin{frame}[allowframebreaks]{Referências}
+			\tiny
 			\nocite{*}
 			\bibliographystyle{IEEEtranN}
 	    		\bibliography{referencias}
-		\end{block}
 	\end{frame}
 
 \end{document}
