--- a/AED/Aulas_Fonte_Professor/Aula6/referencias.bib
+++ b/AED/Aulas_Fonte_Professor/Aula6/referencias.bib
@@ -47,3 +47,21 @@
   date   = {2018-10-13},
   url    = {https://www.geeksforgeeks.org},
 }
+
+@Online{DEVMEDIA_2014,
+  author = {Fernanda},
+  editor = {Dev Media},
+  title  = {SQL Join: Entenda como funciona o retorno dos dados},
+  year   = {2014},
+  date   = {2018-10-14},
+  url    = {https://www.devmedia.com.br/sql-join-entenda-como-funciona-o-retorno-dos-dados/31006}
+}
+
+@Online{SQLITE_2018,
+  author = {Sqlite team},
+  editor = {Sqlite team},
+  title  = {SQLite Sample Database},
+  year   = {2018},
+  date   = {2018-10-14},
+  url    = {http://www.sqlitetutorial.net/sqlite-sample-database/}
+}
