finalizadas aulas de tcc2

--- a/TCC_02/Aulas_Fonte_Professor/Aula01/Aula01_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/Aula01_TCC_02.tex
@@ -37,11 +37,13 @@
 
 	\input{../../../SecoesComuns/Contato/contato}
 	
-	\begin{frame}{}
+	\begin{frame}[allowframebreaks]{}
 		\begin{block}{Referências}
+			\tiny
+			\nocite{*}
 			\bibliographystyle{IEEEtranN}
 	    		\bibliography{referencias}
-		\end{block}
+	    	\end{block}
 	\end{frame}
 
 \end{document}
