--- a/TCC_02/Aulas_Fonte_Professor/Aula02/Aula02_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula02/Aula02_TCC_02.tex
@@ -25,11 +25,13 @@
 
 	\input{./secoes/Contato/contato}
 
-	\begin{frame}[allowframebreaks]{Referências}
+	\begin{frame}[allowframebreaks]{}
+		\begin{block}{Referências}
 			\tiny
 			\nocite{*}
 			\bibliographystyle{IEEEtranN}
 	    		\bibliography{referencias}
+	    	\end{block}
 	\end{frame}
 
 \end{document}
