--- a/TCC_02/Aulas_Fonte_Professor/Aula03/Aula03_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula03/Aula03_TCC_02.tex
@@ -20,12 +20,14 @@
 	\input{./secoes/Duvidas/duvidas}
 	
 	\input{./secoes/Contato/contato}
-	
-	\begin{frame}[allowframebreaks]{Referências}
+			
+	\begin{frame}[allowframebreaks]{}
+		\begin{block}{Referências}
 			\tiny
 			\nocite{*}
 			\bibliographystyle{IEEEtranN}
 	    		\bibliography{referencias}
+	    	\end{block}
 	\end{frame}
 	
 \end{document}
