--- a/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Citacoes/citacoes.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Citacoes/citacoes.tex
@@ -17,8 +17,7 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=4cm, width = 10cm]{./pic/diretamenos3linhas.png}
-			\caption{Citação direta com menos de 3 linhas}
-			\author{Guia de formatação SENAC }
+			\caption{Citação direta com menos de 3 linhas \cite{GUIA_SENAC}}
 			\label{fig_citacaodiretamenos3linhas}
 		\end{figure}
 	\end{block}
@@ -28,9 +27,8 @@
 	\begin{block}{Citações Diretas}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=7cm, width = 11cm]{./pic/diretamais3linhas.png}
-			\caption{Citação direta com mais de 3 linhas}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=6cm, width = 11cm]{./pic/diretamais3linhas.png}
+			\caption{Citação direta com mais de 3 linhas \cite{GUIA_SENAC}}
 			\label{fig_citacaodiretamais3linhas}
 		\end{figure}
 	\end{block}
@@ -50,9 +48,8 @@
 	\begin{block}{Citações Indiretas}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=2cm, width = 10cm]{./pic/citacaoindireta.png}
-			\caption{Citação indireta}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=1cm, width = 8cm]{./pic/citacaoindireta.png}
+			\caption{Citação indireta \cite{GUIA_SENAC}}
 			\label{fig_citacaoindireta}
 		\end{figure}
 	\end{block}
@@ -71,8 +68,7 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=5cm, width = 10cm]{./pic/apud.png}
-			\caption{Citação de citação}
-			\author{Guia de formatação SENAC }
+			\caption{Citação de citação \cite{GUIA_SENAC}}
 			\label{fig_citacaodecitacao}
 		\end{figure}
 	\end{block}
@@ -92,9 +88,8 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 7cm]{./pic/alfabetica.png}
-			\caption{Citações de vários trabalhos: ordem alfabética}
-			\author{Guia de formatação SENAC }
-			\label{fig_citacaodecitacao}
+			\caption{Citações de vários trabalhos: ordem alfabética \cite{GUIA_SENAC}}
+			\label{fig_citacaodevariostrabalhos}
 		\end{figure}
 	\end{block}
 	
@@ -105,9 +100,8 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=3cm, width = 7cm]{./pic/cronologica.png}
-			\caption{Citações de vários trabalhos: ordem cronológica}
-			\author{Guia de formatação SENAC }
-			\label{fig_citacaodecitacao}
+			\caption{Citações de vários trabalhos: ordem cronológica \cite{GUIA_SENAC}}
+			\label{fig_citacaoordemcronologica}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -118,9 +112,8 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=1cm, width = 7cm]{./pic/letra.png}
-			\caption{Citações de vários trabalhos: mesmo autor, mesmo ano}
-			\author{Guia de formatação SENAC }
-			\label{fig_citacaodecitacao}
+			\caption{Citações de vários trabalhos: mesmo autor, mesmo ano \cite{GUIA_SENAC}}
+			\label{fig_citacaovariosautoresiguais}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -139,9 +132,8 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=1cm, width = 7cm]{./pic/autordata.png}
-			\caption{Referência autor-data}
-			\author{Guia de formatação SENAC }
-			\label{fig_citacaodecitacao}
+			\caption{Referência autor-data \cite{GUIA_SENAC}}
+			\label{fig_citacaoautordata}
 		\end{figure}
 	\end{block}
 \end{frame}
@@ -159,9 +151,8 @@
 		 \begin{figure}[!htb]
 			\centering	  				
 			\includegraphics[height=1cm, width = 7cm]{./pic/numerico.png}
-			\caption{Referência numérica}
-			\author{Guia de formatação SENAC }
-			\label{fig_citacaodecitacao}
+			\caption{Referência numérica \cite{GUIA_SENAC}}
+			\label{fig_citacaoreferencianumerica}
 		\end{figure}
 	\end{block}
 \end{frame}
