--- a/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Referencias/referencias.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/secoes/Referencias/referencias.tex
@@ -16,8 +16,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/trabalhoeventodigital.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=4cm, width = 11cm]{./pic/referencias/trabalhoeventodigital.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia01}
 		\end{figure}
 	\end{block}
@@ -27,8 +27,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/artigorevistadigital.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=2cm, width = 10cm]{./pic/referencias/artigorevistadigital.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia02}
 		\end{figure}
 	\end{block}
@@ -38,8 +38,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/dissertacoesteses.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=2cm, width = 10cm]{./pic/referencias/dissertacoesteses.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia03}
 		\end{figure}
 	\end{block}
@@ -49,8 +49,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/livroimpresso.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=1cm, width = 10cm]{./pic/referencias/livroimpresso.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia04}
 		\end{figure}
 	\end{block}
@@ -60,8 +60,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/normastecnicas.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=1cm, width = 10cm]{./pic/referencias/normastecnicas.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia05}
 		\end{figure}
 	\end{block}
@@ -71,8 +71,8 @@
 	\begin{block}{Referências}	
 		 \begin{figure}[!htb]
 			\centering	  				
-			\includegraphics[height=4cm, width = 10cm]{./pic/referencias/relatoriooficial.png}
-			\author{Guia de formatação SENAC }
+			\includegraphics[height=1cm, width = 10cm]{./pic/referencias/relatoriooficial.png}
+			\caption{Guia de formatação SENAC \cite{GUIA_SENAC}}
 			\label{fig_referencia06}
 		\end{figure}
 	\end{block}
