--- a/TCC_02/Aulas_Fonte_Professor/Aula04/Aula04_TCC_02.tex
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/Aula04_TCC_02.tex
@@ -14,7 +14,7 @@
 	\input{./secoes/Sumario/sumario}
 	
 	\input{./secoes/Cronograma/cronograma}
-
+	
 	\input{./secoes/Citacoes/citacoes}
 	
 	\input{./secoes/Referencias/referencias}
@@ -22,13 +22,14 @@
 	\input{./secoes/Duvidas/duvidas}
 	
 	\input{./secoes/Contato/contato}
-	
-	\begin{frame}[allowframebreaks]{Referências}
+		
+	\begin{frame}[allowframebreaks]{}
+		\begin{block}{Referências}
 			\tiny
 			\nocite{*}
 			\bibliographystyle{IEEEtranN}
 	    		\bibliography{referencias}
+	    	\end{block}
 	\end{frame}
-	
 	
 \end{document}
