--- a/TCC_02/Aulas_Fonte_Professor/Aula04/referencias.bib
+++ b/TCC_02/Aulas_Fonte_Professor/Aula04/referencias.bib
@@ -1,11 +1,11 @@
 % Encoding: UTF-8
 
-@inproceedings{Khouri2015,
-  title={A Systematic Review about Activities Recommendation in Workflows},
-  author={Khouri, Adilson Lopes and Digiampietri, Luciano Antonio},
-  booktitle={12{\textordfeminine} Confer{\^e}ncia Internacional sobre Sistemas de Informa{\c{c}}{\~a}o e Gest{\~a}o de Tecnologia (CONTECSI)},
-  pages={14},
-  year={2015}
+@InProceedings{Khouri2015,
+  author    = {Adilson Lopes Khouri and Luciano Antonio Digiampietri},
+  title     = {A Systematic Review about Activities Recommendation in Workflows},
+  booktitle = {12{\textordfeminine} Confer{\^e}ncia Internacional sobre Sistemas de Informa{\c{c}}{\~a}o e Gest{\~a}o de Tecnologia (CONTECSI)},
+  year      = {2015},
+  pages     = {14},
 }
 
 @INPROCEEDINGS{DigiampietriEtAl2015,
@@ -36,7 +36,7 @@ experiments."
 }
 
 @Online{POSGRADUANDO_2018,
-  author = {Site pós-graduando},
+  author = {Pós-graduando},
   editor = {Site pós-graduando},
   title  = {Como escrever o Material e Métodos de um trabalho acadêmico},
   year   = {2018},
@@ -45,11 +45,19 @@ experiments."
 }
 
 @MastersThesis{KHOURI_2016,
-  author      = {Adilson Lopes Khouri, Luciano Antonio Digiampietri},
+  author      = {Adilson Lopes Khouri and Luciano Antonio Digiampietri},
   title       = {Desenvolvimento de técnica para recomendar atividades em workflows científicos: uma abordagem baseada em ontologias},
   institution = {Universidade de São Paulo},
   year        = {2016},
   date        = {2016-04-20},
+}
+
+@Manual{GUIA_SENAC,
+  author = {SENAC},
+  editor = {SENAC},
+  title  = {Guia de normalização de monografias, dissertações e teses},
+  year   = {2014},
+  date   = {2014-12-01},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
